subpages: fix spacing on rules

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -562,3 +562,10 @@ a.noblue {
 	border-top: 1px solid #c2c2c2;
 	margin-top: -2px;
 }
+
+.rules {
+	li {
+		padding-bottom: 15px;
+		padding-top: 5px;
+	}
+}
